// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MdInput Component Should render text onto textbox when user types 1`] = `
<div>
  <div>
    <button
      class="btn"
      style="color: rgb(41, 41, 41);"
    >
      Write
    </button>
    <button
      class="btn"
      style="color: rgb(142, 142, 142);"
    >
      Preview
    </button>
    <textarea
      class="textarea"
      data-testid="textbox"
      placeholder="Type something..."
      style="height: 2px;"
    >
      Javascript
    </textarea>
  </div>
</div>
`;

exports[`MdInput Component Should switch to Preview mode when user clicks Preview button 1`] = `
<div>
  <div>
    <button
      class="btn"
      style="color: rgb(142, 142, 142);"
    >
      Write
    </button>
    <button
      class="btn"
      style="color: rgb(41, 41, 41);"
    >
      Preview
    </button>
    <span
      class="preview"
      data-testid="markdown"
    />
    <textarea
      class="textarea d-none"
      data-testid="textbox"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`MdInput Component Should switch to Write mode when user clicks Write button 1`] = `
<div>
  <div>
    <button
      class="btn"
      style="color: rgb(41, 41, 41);"
    >
      Write
    </button>
    <button
      class="btn"
      style="color: rgb(142, 142, 142);"
    >
      Preview
    </button>
    <textarea
      class="textarea"
      data-testid="textbox"
      placeholder="Type something..."
    />
  </div>
</div>
`;
